fixtures/error/createSong_InvalidUserId.js
module.exports = {
    statusCode: 400,
    detail: 'Invalid user ObjectId'
  };
  